// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledTag renders correctly as secondary and removable 1`] = `
<StyledTag
  className=""
  onClick={null}
  onRemove={null}
  removable={true}
  secondary={true}
  tag="foo"
>
  <StyledTag__Wrapper
    className=""
    onClick={null}
    secondary={true}
  >
    <StyledComponent
      className=""
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "StyledTag__Wrapper-ja2wb4-0",
            "isStatic": false,
            "lastClassName": "QFtsa",
            "rules": Array [
              "align-items:center;border-radius:25px;border:1px solid ",
              [Function],
              ";cursor:pointer;display:inline-flex;font-size:",
              [Function],
              ";line-height:",
              [Function],
              ";padding:2px 12px;",
              [Function],
            ],
          },
          "displayName": "StyledTag__Wrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "StyledTag__Wrapper-ja2wb4-0",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      onClick={null}
      secondary={true}
    >
      <span
        className="StyledTag__Wrapper-ja2wb4-0 QFtsa"
        onClick={null}
      >
        foo
        <StyledTag__Icon
          onClick={null}
        >
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "StyledTag__Icon-ja2wb4-1",
                  "isStatic": true,
                  "lastClassName": "VqIUo",
                  "rules": Array [
                    "cursor:pointer;height:11px;margin-left:5px;width:11px;",
                  ],
                },
                "displayName": "StyledTag__Icon",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "StyledTag__Icon-ja2wb4-1",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            onClick={null}
          >
            <_default
              className="StyledTag__Icon-ja2wb4-1 VqIUo"
              onClick={null}
            >
              <_default
                className="StyledTag__Icon-ja2wb4-1 VqIUo"
                onClick={null}
              >
                <div
                  className="StyledTag__Icon-ja2wb4-1 VqIUo"
                  onClick={null}
                />
              </_default>
            </_default>
          </StyledComponent>
        </StyledTag__Icon>
      </span>
    </StyledComponent>
  </StyledTag__Wrapper>
</StyledTag>
`;

exports[`StyledTag renders correctly with default values 1`] = `
<StyledTag
  className=""
  onClick={null}
  onRemove={null}
  removable={false}
  secondary={false}
  tag="foo"
>
  <StyledTag__Wrapper
    className=""
    onClick={null}
    secondary={false}
  >
    <StyledComponent
      className=""
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "StyledTag__Wrapper-ja2wb4-0",
            "isStatic": false,
            "lastClassName": "fiVpbi",
            "rules": Array [
              "align-items:center;border-radius:25px;border:1px solid ",
              [Function],
              ";cursor:pointer;display:inline-flex;font-size:",
              [Function],
              ";line-height:",
              [Function],
              ";padding:2px 12px;",
              [Function],
            ],
          },
          "displayName": "StyledTag__Wrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "StyledTag__Wrapper-ja2wb4-0",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      onClick={null}
      secondary={false}
    >
      <span
        className="StyledTag__Wrapper-ja2wb4-0 fiVpbi"
        onClick={null}
      >
        foo
      </span>
    </StyledComponent>
  </StyledTag__Wrapper>
</StyledTag>
`;
